Bug 63205 - xbacklight 1.2.0 prints garbage value for backlight level
Summary: xbacklight 1.2.0 prints garbage value for backlight level
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/xbacklight (show other bugs)
Version: git
Hardware: Other All
: medium major
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-06 12:42 UTC by Edward Sheldrake
Modified: 2018-06-17 19:52 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
fix (716 bytes, text/plain)
2013-04-06 12:42 UTC, Edward Sheldrake
no flags Details

Description Edward Sheldrake 2013-04-06 12:42:19 UTC
Created attachment 77521 [details]
fix

obviously incorrect output of "xbacklight -get":
51671552015166906368.000000

valgrind reports an invalid read of size 8 at xbacklight.c:91
Comment 1 Alan Coopersmith 2013-04-06 16:36:42 UTC
Thanks, patch sent to xorg-devel for review.
Comment 2 Alan Coopersmith 2013-04-09 06:03:08 UTC
Patch pushed to git master for the next release:

To ssh://git.freedesktop.org/git/xorg/app/xbacklight
   36ffc5e..5d7642f  master -> master

http://cgit.freedesktop.org/xorg/app/xbacklight/commit/?id=5d7642ffd0de1d6037f6f98b8733e8a8161e24d3

Thanks for the fix!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.