Fix reading backlight level on 64-bit systems (bug 63205)

obviously incorrect output of "xbacklight -get":
51671552015166906368.000000

valgrind reports an invalid read of size 8 at xbacklight.c:91

https://bugs.freedesktop.org/show_bug.cgi?id=63205

Reviewed-by: Julien Cristau <jcristau@debian.org>
Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>